# rquickshare

./: Cargo.toml  README.md  TODO.md
.cargo/: audit.toml
app/main/: package.json  pnpm-lock.yaml  tailwind.config.cjs
app/main/src/: main.ts
app/main/src-tauri/: Cargo.toml
app/main/src-tauri/capabilities/: migrated.json
app/main/src-tauri/src/: logger.rs  main.rs
app/main/src-tauri/src/cmds/: change_download_path.rs  change_logging_level.rs  change_visibility.rs  discovery.rs  get_hostname.rs  mod.rs  send_payload.rs  send_to_rs.rs
app/main/src/components/: HomePage.vue
app/main/src/composables/: ContentStatus.vue  ItemSide.vue  SettingsModal.vue  SideMenu.vue
app/main/src/vue_lib/: types.ts  utils.ts
app/main/src/vue_lib/assets/: main.postcss
app/main/src/vue_lib/helper/: ParamsHelper.d.ts
core_lib/: Cargo.toml  build.rs
core_lib/bindings/: EndpointInfo.ts
core_lib/src/: lib.rs  manager.rs  qr.rs  utils.rs
core_lib/src/hdl/: ble_mtu_win.rs  ble_receiver.rs  blea_discovery.rs  blea_recv_win.rs  blea_send.rs  blea_win.rs  crypto.rs  frame_reader.rs  hotspot_win.rs  inbound.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs  tests.rs  wifi_direct_win.rs  wifi_join_win.rs
core_lib/src/proto_src/: offline_wire_formats.proto
docs/: ble-receiver-discovery.md  wifi-direct.md
