[package]
name = "rqs_lib"
version.workspace = true
edition = "2021"
authors = ["martichou"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "core_bin"
path = "src/bin.rs"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["full"], optional = true }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Devices_Bluetooth_Advertisement",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_Com",
], optional = true }

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
btleplug = { version = "0.11", optional = true }
bytes = "1.10"
directories = "6.0"
futures = "0.3"
get_if_addrs = "0.5"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
hostname = "0.4"
libaes = "0.7"
log = "0.4"
mdns-sd = { git = "https://github.com/Martichou/mdns-sd", branch = "unsolicited" }
mime_guess = "2.0"
num-bigint = "0.4"
once_cell = "1.20"
p256 = { version = "0.13", features = ["ecdh"] }
prost = "0.13"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
socket2 = "0.5"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10.0", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
uuid = "1.15"

[build-dependencies]
prost-build = "0.13"

[features]
default = ["experimental"]
experimental = ["bluer", "btleplug", "windows"]
