[package]
name = "rqs_lib"
version.workspace = true
edition = "2021"
authors = ["martichou"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "core_bin"
path = "src/bin.rs"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["full"], optional = true }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Devices_Bluetooth_Advertisement",
    # GATT service provider: Quick Share receivers advertise a connectable
    # GATT service (isPrivateGatt), not a plain beacon, so the phone lists them.
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_WiFiDirect",
    # WiFiDirectConnectionListener hands back a DeviceInformation for the peer;
    # accepting the connection means resolving it by id.
    "Devices_Enumeration",
    "Networking",
    "Networking_Connectivity",
    "Networking_NetworkOperators",
    "Security_Credentials",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_Com",
    # Read the WiFi Direct group owner's operating channel. WinRT's
    # WiFiDirectAdvertisement exposes no channel/frequency, so drop to the Win32
    # WLAN API (WlanEnumInterfaces + WlanQueryInterface) for it.
    "Win32_NetworkManagement_WiFi",
    "Win32_Foundation",
], optional = true }

[dependencies]
aes-gcm = "0.11"
anyhow = "1.0"
base64 = "0.22"
btleplug = { version = "0.11", optional = true }
bytes = "1.10"
directories = "6.0"
futures = "0.3"
get_if_addrs = "0.5"
hex = "0.4"
hkdf = "0.13"
hmac = "0.13"
hostname = "0.4"
libaes = "0.7"
log = "0.4"
# The published upstream crate, not Martichou's `unsolicited` fork. That fork
# exists to expose `register_resend` (a forced re-announcement), but it is
# pinned to a *branch* of a 0.10.4 snapshot from Feb 2024 whose maintainer is
# inactive - so we were missing two years of DNS-parser hardening on untrusted
# multicast input (name-compression loops, read_u16 length checks, RDATA
# checks). Upstream documents `register()` as the way to re-announce, which
# covers what we used `register_resend` for.
mdns-sd = "0.20"
mime_guess = "2.0"
num-bigint = "0.4"
once_cell = "1.20"
p256 = { version = "0.14", features = ["ecdh"] }
prost = "0.13"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
socket2 = "0.5"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10.0", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
uuid = "1.15"

[build-dependencies]
prost-build = "0.13"

[features]
default = ["experimental"]
experimental = ["bluer", "btleplug", "windows"]
